# Game_Nim_server

./: .gitignore  Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  Enums.cpp  Enums.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Logger.cpp  Logger.h  MainOptions.cpp  MainOptions.h  Makefile  Manager.cpp  Manager.h  NetworkService.cpp  NetworkService.h  NimServer  Parameters.cpp  Parameters.h  RCVMessage.cpp  RCVMessage.h  RouterService.cpp  RouterService.h  SNDMessage.cpp  SNDMessage.h  SafeList.cpp  SafeQueue.cpp  SenderService.cpp  SenderService.h  StringUtils.cpp  StringUtils.h  Thread.h  User.cpp  User.h  UserManager.cpp  UserManager.h  (+2 more)
